cleaned up various written elements

--- a/finalproject.html
+++ b/finalproject.html
@@ -117,14 +117,14 @@ img {
 
 <div id="content" class="content">
     <div class="center">
-        <h1>The Collective Unconscious Manifestation Project</h1>
+        <h1>The Collective Unconscious Visualization Project</h1>
         <p>An Experimental Surrealist Net Art Piece Powered By Machine Learning</p>
         <img src="assests/brain.gif" />
         <hr>
         <form action="finalproject_about.html">
           <button class="button button5" type="submit">About The Project</button>
         </form>
-        <button class="button button5" onclick="checkIfMobile()" >Contribute Your Unconscious</button>
+        <button class="button button5" onclick="checkIfMobile()" >Contribute Your Drawing</button>
         <form action="finalproject_view.html">
           <button class="button button5" type="submit">View The Collective Unconscious</button>
         </form>
