--- a/finalproject_contribute.html
+++ b/finalproject_contribute.html
@@ -205,8 +205,7 @@
       <div id="toHideOnSubmit" class="center">
         <p><b>Draw your scribble in this box.</b> <br style="display: block; content: ''; margin-top: 0;"> 
         Please refrain from using rational thought. <br style="display: block; content: ''; margin-top: 0;"> 
-        Allow your cursor to move randomly. <br style="display: block; content: ''; margin-top: 0;"> 
-        (submit only one scribble per individual) </p> 
+        See <a href="finalproject_about.html">here</a> if you are unsure what to do. </p> 
         <div id="canvasContainer" class="center"></div>
         <br>
         <button onclick="submitImage();">Submit Scribble</button>
