--- a/finalproject_view.html
+++ b/finalproject_view.html
@@ -173,10 +173,8 @@ mark {
 <div id="content" class="content">
     <a href="finalproject.html">&lt back</a>
     <div class="center" style="padding: 10px 50px 20px 50px;">
-        <a href="finalproject_archive.html">archive</a>
-        <p>Number of Unconscious Imprints in Dataset: 72</p>
-        <p>Last Updated: 4/22/21</p>
-        <p style="text-align: justify; hyphens: auto; -webkit-hyphens: auto; -ms-hyphens: auto"><mark>Note 4/22/21:</mark> It may appear that the image freezes. This is not the case. Enough scribbles have been submitted such that the results now stabilize after a certain point.</p>
+        <strong>Dataset Size: </strong><p style="display:inline">72</p> <br>
+        <strong>Last Updated: </strong> <p style="display:inline">4/22/23</p> <br> <br>
         <img id="result" src="assests/April22.gif">
     </div>
     <div class="center">
