--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ img {
 
 <div id="content" class="content">
     <div class="center">
-        <h1>The Collective Unconscious Manifestation Project</h1>
+        <h1>The Collective Unconscious Visualization Project</h1>
         <p>An Experimental Surrealist Net Art Piece Powered By Machine Learning</p>
         <img src="assests/brain.gif" />
         <hr>
