improved text elements

--- a/finalproject_contribute.html
+++ b/finalproject_contribute.html
@@ -203,17 +203,17 @@
     <div id="content" class="content">
       <a href="finalproject.html">&lt back</a>
       <div id="toHideOnSubmit" class="center">
-        <p><b>Draw your scribble in this box.</b> <br style="display: block; content: ''; margin-top: 0;"> 
+        <p><b>Draw your automatic drawing in this box.</b> <br style="display: block; content: ''; margin-top: 0;"> 
         Please refrain from using rational thought. <br style="display: block; content: ''; margin-top: 0;"> 
         See <a href="finalproject_about.html">here</a> if you are unsure what to do. </p> 
         <div id="canvasContainer" class="center"></div>
         <br>
-        <button onclick="submitImage();">Submit Scribble</button>
-        <button id="clear">Clear Scribble</button>
+        <button onclick="submitImage();">Submit Drawing</button>
+        <button id="clear">Clear Drawing</button>
       </div> 
 
       <div id="loader" class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-      <h1 id="successMsg" class="centerTwo" style="visibility: hidden;">Thank you.<br>Your unconscious has been uploaded.</h1>
+      <h1 id="successMsg" class="centerTwo" style="visibility: hidden;">Thank you.<br>Your drawing has been uploaded.</h1>
       <div class="center">
         <form action="finalproject.html">
           <button id="returnBtn" class="button button5" type="submit">Return To Project Homepage</button>
