--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ img {
         <form action="finalproject_about.html">
           <button class="button button5" type="submit">About The Project</button>
         </form>
-        <button class="button button5" onclick="checkIfMobile()" >Contribute Your Unconscious</button>
+        <button class="button button5" onclick="checkIfMobile()" >Contribute Your Drawing</button>
         <form action="finalproject_view.html">
           <button class="button button5" type="submit">View The Collective Unconscious</button>
         </form>
