--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <br>
 
   <div>
-    <button onclick="addNote();">Add</button>
+    <button onclick="start();">Add</button>
     <button onclick="exportDeck();">Export</button>
   </div>
 </body>
