--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div id="home-content">
               <h3><strong>iNatFungi2Anki 🍄 </strong></h3>
               <div>
-              This tool takes your iNaturalist observations of fungi and turns them into Anki flashcards <br>
+              This tool transforms your iNaturalist fungi observations into detailed <a target="_blank" href="https://en.wikipedia.org/wiki/Anki_(software)">Anki</a> flashcards. <br>
               </div>
               <br>
               <div id="add-note">
@@ -90,7 +90,7 @@
 
             <div id="about-content" style="display:none;">
               <h1>About iNatFungi2Anki</h1>
-              <p>This application helps you convert iNaturalist fungi observations into Anki cards.</p>
+              <p>This application helps you convert iNaturalist fungi observations into <a href="https://en.wikipedia.org/wiki/Anki_(software)">Anki</a> cards.</p>
               <!-- Add more about information here -->
             </div>
           </div>
