Implemented error handling when fetching images

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <ul>
                 <li><a href="https://www.mycomatch.com/">MycoMatch:</a> Created by Ian Gibson, iNatFungi2Anki pulls data from this software to create rich and detailed flashcards.</li>
                 <li><a href="https://github.com/krmanik/genanki-js">genanki-js:</a> Javascript library used to generate Anki cards.</li>
-                <li><a href="https://api.inaturalist.org/v1/docs/">iNaturalist API:</a> Used to fetch observatoin data from iNat.</li>
+                <li><a href="https://api.inaturalist.org/v1/docs/">iNaturalist API:</a> Used to fetch observation data from iNat.</li>
               </ul>  
 
               <h4><strong>Contact:</strong></h4>
