Updated about page

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
               <p class="justify-content-center"> 
                 This tool is designed to help mycologists seamlessly convert their iNaturalist fungi observations into Anki flashcards. Whether you're a budding forager or a taxonomy expert, iNatFungi2Anki offers a simple way to integrate your field observations into your study routine.</p>
               
-              <h4><strong>How It Works:</strong></h4>
+              <h4><strong>How It Works</strong></h4>
               <ol>
                 <li><strong>Input Your Observations:</strong> Simply paste the URLs of your iNaturalist fungi observations into the input box.</li>
                 <li><strong>Generate Flashcards:</strong> The tool will automatically fetch the relevant details from your observations and convert them into Anki flashcards.</li>
                 <li><strong>Learn and Review:</strong> Download your flashcards and import them into Anki to start learning!</li>
               </ol>
 
-              <h4><strong>Sample Flashcard:</strong></h4>
+              <h4><strong>Sample Flashcard</strong></h4>
 
               <div class="container">
                 <div class="row">
@@ -119,15 +119,18 @@
                 </div>
               </div>
 
-              <h4><strong>Resouces Used:</strong></h4>
+              <h4><strong>Resouces Used</strong></h4>
               <ul>
                 <li><a href="https://www.mycomatch.com/">MycoMatch:</a> Created by Ian Gibson, iNatFungi2Anki pulls data from this software to create rich and detailed flashcards.</li>
                 <li><a href="https://github.com/krmanik/genanki-js">genanki-js:</a> Javascript library used to generate Anki cards.</li>
                 <li><a href="https://api.inaturalist.org/v1/docs/">iNaturalist API:</a> Used to fetch observation data from iNat.</li>
               </ul>  
 
-              <h4><strong>Contact:</strong></h4>
-              <p class="justify-content-center"> jaredbance@gmail.com</p>
+              <h4><strong>About The Developer</strong></h4>
+              <p class="justify-content-center"> Jared Bance is an avid fungi enthusiast and software developer based in Vancouver, BC.
+                <br>
+                Feel free to reach out at <a style="color: #00bc8c;">jaredbance@gmail.com</a>.</p>
+              <br><br>
             </div>
           </div>
       </div>
