further hypenization features

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang=en-US>
 
 <head>
   <title>iNatFungi2Anki</title>
@@ -93,7 +93,7 @@
               <div id="output" style="font-family: 'Courier New'; color:rgb(10, 225, 78)"></div>
             </div>
 
-            <div id="about-content" style="display:none; text-align:justify;" class="mx-auto customNavbar">
+            <div id="about-content" style="display:none; text-align:justify;" class="mx-auto customNavbar hyphenize">
               <h3><strong>About iNatFungi2Anki</strong></h3>
               
               <p class="justify-content-center"> 
