--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-md-12" id="main">
             <div id="home-content">
               <h3><strong>iNatFungi2Anki 🍄 </strong></h3>
-              <div>
+              <div class="hyphenize">
               This tool transforms your iNaturalist fungi observations into detailed <a target="_blank" href="https://en.wikipedia.org/wiki/Anki_(software)">Anki</a> flashcards. <br>
               </div>
               <br>
@@ -93,14 +93,14 @@
               <div id="output" style="font-family: 'Courier New'; color:rgb(10, 225, 78)"></div>
             </div>
 
-            <div id="about-content" style="display:none; text-align:justify;" class="mx-auto customNavbar hyphenize">
+            <div id="about-content" style="display:none; text-align:justify;" class="mx-auto customNavbar">
               <h3><strong>About iNatFungi2Anki</strong></h3>
               
-              <p class="justify-content-center"> 
+              <p class="justify-content-center hyphenize"> 
                 This tool is designed to help mycologists seamlessly convert their iNaturalist fungi observations into Anki flashcards. Whether you're a budding forager or a taxonomy expert, iNatFungi2Anki offers a simple way to integrate your field observations into your study routine.</p>
               
               <h4><strong>How It Works</strong></h4>
-              <ol>
+              <ol class="hyphenize">
                 <li><strong>Input Your Observations:</strong> Simply paste the URLs of your iNaturalist fungi observations into the input box.</li>
                 <li><strong>Generate Flashcards:</strong> The tool will automatically fetch the relevant details from your observations and convert them into Anki flashcards.</li>
                 <li><strong>Learn and Review:</strong> Download your flashcards and import them into Anki to start learning!</li>
@@ -120,14 +120,14 @@
               </div>
 
               <h4><strong>Resouces Used</strong></h4>
-              <ul>
+              <ul class="hyphenize">
                 <li><a href="https://www.mycomatch.com/">MycoMatch:</a> Created by Ian Gibson, iNatFungi2Anki pulls data from this software to create rich and detailed flashcards.</li>
                 <li><a href="https://github.com/krmanik/genanki-js">genanki-js:</a> Javascript library used to generate Anki cards.</li>
                 <li><a href="https://api.inaturalist.org/v1/docs/">iNaturalist API:</a> Used to fetch observation data from iNat.</li>
               </ul>  
 
               <h4><strong>About The Developer</strong></h4>
-              <p class="justify-content-center"> Jared Bance is an avid fungi enthusiast and software developer based in Vancouver, BC.
+              <p class="justify-content-center hyphenize"> Jared Bance is an avid fungi enthusiast and software developer based in Vancouver, BC.
                 <br>
                 Feel free to reach out at <a style="color: #00bc8c;">jaredbance@gmail.com</a>.</p>
               <br><br>
